--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-html, body {
-  margin: 0;
-  padding: 0;
-  overflow-x: auto;
-  overflow-y: auto;
-}
-
-img {
-  max-width: none;
-  height: auto;
-}
-</style>
 <meta charset="utf-8">
 <meta content="width=device-width, initial-scale=1" name="viewport">
 <title>Домики</title>
@@ -22,7 +9,13 @@ img {
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play Домики.</tw-noscript></noscript></tw-story>
-<tw-storydata name="Домики" startnode="1" creator="Twine" creator-version="2.11.1" format="Harlowe" format-version="3.3.9" ifid="E47EFD2D-E77B-4396-9E69-109EEA5C1C38" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Main Street" tags="" position="700,275" size="100,100">&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128421496979598/Clip2net_260206020446.png?ex=698687f6&amp;is=69853676&amp;hm=085bdbefaf3877fe09ae872723f8b09bc87857e1aea69db509db667aeef622e7&amp;=&amp;format=webp&amp;quality=lossless&amp;width=964&amp;height=693&quot;&gt;
+<tw-storydata name="Домики" startnode="1" creator="Twine" creator-version="2.11.1" format="Harlowe" format-version="3.3.9" ifid="E47EFD2D-E77B-4396-9E69-109EEA5C1C38" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Main Street" tags="" position="700,275" size="100,100">&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128421496979598/Clip2net_260206020446.png?ex=698687f6&amp;is=69853676&amp;hm=085bdbefaf3877fe09ae872723f8b09bc87857e1aea69db509db667aeef622e7&amp;=&amp;format=webp&amp;quality=lossless&amp;width=964&amp;height=693&quot;&gt;
 
 You are standing on a quiet street beneath the hill.
 
@@ -37,7 +30,7 @@ Small doors are set into the earth, each leading to a different home.
 A quiet warrior’s home.
 Weapons are kept clean, armor stands ready.
 
-&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128419819389196/5199566917432183656.jpg?ex=698687f6&amp;is=69853676&amp;hm=7bbf800c38ca9301b740aa86ac224a05f6d54aba903b000c5530269b14815d98&amp;=&amp;format=webp&amp;width=1075&amp;height=693&quot;&gt;
+&lt;img src=&quot;https://cdn.discordapp.com/attachments/1012005944718270526/1469441976721084426/2026-02-06_231616.png?ex=6987abfc&amp;is=69865a7c&amp;hm=541f877d87b507f933e7b763f6aa6234fe5d5045a3d88f1e24bf7d81d4e212c3&amp;&quot;&gt;
 
 [[Back to the Street-&gt;Main Street]]</tw-passagedata><tw-passagedata pid="3" name="Whispering Leaves" tags="" position="575,400" size="100,100">**Whispering Leaves**
 
@@ -48,7 +41,7 @@ Sunlight filters through leaves and vines, casting gentle patterns on the walls.
 A woven bed rests in the corner, framed by living greenery.
 Everything here grows, dries, and heals.
 
-&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128420523901069/5199566917432183653.jpg?ex=698687f6&amp;is=69853676&amp;hm=aa5b037981d58b942cadf1aa84b617c644af97ce9c67d872a5127204ba3225dc&amp;=&amp;format=webp&amp;width=1054&amp;height=661&quot;&gt;
+&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469441973638135808/ChatGPT_Image_6_._2026_._21_57_02.png?ex=6987abfb&amp;is=69865a7b&amp;hm=83eab387d5d5607c6a743179d40bcceaa2db08cfface87b0841d383df19fd8e6&amp;=&amp;format=webp&amp;quality=lossless&amp;width=1039&amp;height=693&quot;&gt;
 
 [[Back to the Street-&gt;Main Street]]
 </tw-passagedata><tw-passagedata pid="4" name="Hearthside Haven" tags="" position="700,400" size="100,100">**Hearthside Haven**
@@ -60,7 +53,7 @@ A worktable stands close by, worn smooth by years of careful hands.
 Tools are neatly arranged, ready but never rushed.
 This is a place where time slows, and work is done with patience.
 
-&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128420217720933/5199566917432183657.jpg?ex=698687f6&amp;is=69853676&amp;hm=4ea742b1261e5f6a28fef911eff8ec83c9bf506f1c10acabc150da153a00b80f&amp;=&amp;format=webp&amp;width=1115&amp;height=693&quot;&gt;
+&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469441976083419208/ChatGPT_Image_6_._2026_._22_16_04.png?ex=6987abfc&amp;is=69865a7c&amp;hm=486dddcc202ab8b3b5c812ef010254ca7556378aa56505be4f3d053b2e2dff00&amp;=&amp;format=webp&amp;quality=lossless&amp;width=1039&amp;height=693&quot;&gt;
 
 [[Back to the Street-&gt;Main Street]]
 </tw-passagedata><tw-passagedata pid="5" name="Saltwind Nook" tags="" position="825,400" size="100,100">**Saltwind Nook**
@@ -72,7 +65,7 @@ A hammock sways gently, as if moved by an unseen tide.
 Lantern light glows warm against sea-worn surfaces.
 This is not a place of departure, but of return.
 
-&lt;img src=&quot;https://cdn.discordapp.com/attachments/1012005944718270526/1469128421148856443/5199566917432183655.jpg?ex=698687f6&amp;is=69853676&amp;hm=9d0e5ab7528952723c5e540a354a0fd8742260bf9f518eb48af11fd0b9780188&amp;&quot;&gt;
+&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469441974573469706/ChatGPT_Image_6_._2026_._22_09_23.png?ex=6987abfb&amp;is=69865a7b&amp;hm=8ac64539219fc492da41029f2b160d2b617bc16af2d5fb9a840fce47915d3637&amp;=&amp;format=webp&amp;quality=lossless&amp;width=1039&amp;height=693&quot;&gt;
 
 [[Back to the Street-&gt;Main Street]]
 </tw-passagedata><tw-passagedata pid="6" name="Brush &amp; Bloom" tags="" position="825,250" size="100,100">**Brush &amp; Bloom**
@@ -84,7 +77,7 @@ Brushes rest in jars beside small plants and open books.
 Colors seem to linger in the air, as if the room remembers every stroke.
 This is a place where ideas take root and slowly come into bloom.
 
-&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128420838604934/5199566917432183654.jpg?ex=698687f6&amp;is=69853676&amp;hm=c191d8ea1cbd332f61c337a1929cfcb9062c1d04813d5904c9970df8f202a76c&amp;=&amp;format=webp&amp;width=1021&amp;height=693&quot;&gt;
+&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469441975173382219/ChatGPT_Image_6_._2026_._22_14_40.png?ex=6987abfb&amp;is=69865a7b&amp;hm=15bfbe65f2507a047c057eca67a3810c3d3a68643c58650d5322712a82eb759d&amp;=&amp;format=webp&amp;quality=lossless&amp;width=1039&amp;height=693&quot;&gt;
 
 [[Back to the Street-&gt;Main Street]]
 </tw-passagedata></tw-storydata>
