--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   display: block;
   margin: 0 auto;
 }
-</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Main Street" tags="" position="700,275" size="100,100">&lt;img src=&quot;https://media.discordapp.net/attachments/1012005944718270526/1469128421496979598/Clip2net_260206020446.png?ex=698687f6&amp;is=69853676&amp;hm=085bdbefaf3877fe09ae872723f8b09bc87857e1aea69db509db667aeef622e7&amp;=&amp;format=webp&amp;quality=lossless&amp;width=964&amp;height=693&quot;&gt;
+</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Main Street" tags="" position="700,275" size="100,100">&lt;img src=&quot;https://cdn.discordapp.com/attachments/1012005944718270526/1469621439685595312/5199566917432183654.jpg?ex=6988531f&amp;is=6987019f&amp;hm=fbb68ab3cc5b8cdd352db43f0e699ebceae0bb835ce555c99a206fd30f710f1f&quot;&gt;
 
 You are standing on a quiet street beneath the hill.
 
